--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 </head>
 
 <body>
-    <h6 class="header"> Header </h6>
+    <h6 class="header"> blah </h6>
     <p class="text"> rice & spice </p>
     <p class="title"> ishani chettri </p>
 
   <img src="coffee shop.jpg" width="600" height="400">
-  <iframe width="600" height="450" src="https://www.youtube.com/embed/Pkh8UtuejGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
 
