--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 </head>
 
 <body>
-    <h6 class="header"> blah </h6>
-    <p class="text"> rice & spice </p>
-    <p class="title"> ishani chettri </p>
 
-  <img src="coffee shop.jpg" width="600" height="400">
+    <p class="header"> ishani chettri </p>
+    <p class="title"> caffeinated dreams </p>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
+
+
+  <div class="intro">
+    hi my name is ishani and
+    im a high school senior who learned
+    how to code on sundays in july in a
+    journalism program.
+    this is my first time learning
+    how to code so this is pretty blah.
+  </div>
 
 
 </body>
