move bowl-of-white-rice.svg to folder

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
   <link href="index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
-
+  <div class="box">
     <p class="header"> ishani chettri </p>
-    <p class="title"> caffeinated dreams </p>
+  </div>
 
+    <p class="title"> caffeinated dreams </p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
-
+    <hr>
 
   <div class="intro">
     hi my name is ishani and
@@ -32,6 +34,11 @@
     how to code so this is pretty blah.
   </div>
 
+  <div class="icons">
+    <i class="material-icons fa-lg"> cloud </i>
+    <i class="fa fa-comments fa-lg" aria-hidden="true"> </i>
+  </div>
+<a href="mailto:chettri.ishani@yahoo.com"> email me! </a>
 
 </body>
 
