--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link href="index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
 
 <body>
@@ -34,11 +35,13 @@
     how to code so this is pretty blah.
   </div>
 
+  <div class="columns">
+  
+
   <div class="icons">
     <i class="material-icons fa-lg"> cloud </i>
-    <i class="fa fa-comments fa-lg" aria-hidden="true"> </i>
+    <i class="fa fa-comments fa-lg"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="fa fa-comments"> </a> </i>
   </div>
-<a href="mailto:chettri.ishani@yahoo.com"> email me! </a>
 
 </body>
 
