--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -25,7 +24,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
     <hr>
-
   <div class="intro">
     hi my name is ishani and
     im a high school senior who learned
@@ -33,16 +31,24 @@
     journalism program.
     this is my first time learning
     how to code so this is pretty blah.
+    idk what this page is for but im just
+    practicing what i have learned so far
+    from this club and anna who is awesome
+    right now im listening to tenten's theme from
+    naruto. the one hour version cuz i fuckin love
+    her theme. it's similar to neji's like yasssss
+    love that couple so much too bad they had to kill
+    him off like had to like really :(
   </div>
-
-  <div class="columns">
-  
 
   <div class="icons">
     <i class="material-icons fa-lg"> cloud </i>
     <i class="fa fa-comments fa-lg"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="fa fa-comments"> </a> </i>
   </div>
 
-</body>
+  <img src="tumblr night.gif" alt="night" class="night">
+  <img src="tokyo ghoul night.gif" alt="tokyo ghoul" class="tokyoghoul">
+  <img src="source.gif" alt="aesthetic night" class="aesthetic">
 
+</body>
 </html>
