changes made days ago

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -24,7 +25,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
     <hr>
+
   <div class="intro">
+    <div class="introtext">
     hi my name is ishani and
     im a high school senior who learned
     how to code on sundays in july in a
@@ -39,16 +42,27 @@
     her theme. it's similar to neji's like yasssss
     love that couple so much too bad they had to kill
     him off like had to like really :(
+    </div>
+    <ul>
+      <li> <a href="#home" class="links"> Home </a> </li>
+      <li> <a href="#news" class="links"> News </a> </li>
+      <li> <a href="#contact" class="links"> Contact </a> </li>
+      <li> <a href="#about" class="links"> About </a> </li>
+    </ul>
   </div>
 
   <div class="icons">
-    <i class="material-icons fa-lg"> cloud </i>
-    <i class="fa fa-comments fa-lg"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="fa fa-comments"> </a> </i>
+    <div class="cloud"> <i class="material-icons fa-lg"> cloud </i> </div>
+    <div class="mail"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="maillink"> <i class="fa fa-comments fa-lg"> </i> </a> </div>
   </div>
 
-  <img src="tumblr night.gif" alt="night" class="night">
-  <img src="tokyo ghoul night.gif" alt="tokyo ghoul" class="tokyoghoul">
-  <img src="source.gif" alt="aesthetic night" class="aesthetic">
+  <div class="move">
+    <img src="tumblr night.gif" alt="night" class="night">
+    <img src="tokyo ghoul night.gif" alt="tokyo ghoul" class="tokyoghoul">
+    <img src="source.gif" alt="aesthetic night" class="aesthetic">
+  </div>
+
+  <img src="coffee shop.jpg" alt="coffee shop" class="coffeeshop">
 
 </body>
 </html>
