move source.gif

--- a/index.html
+++ b/index.html
@@ -43,13 +43,21 @@
     love that couple so much too bad they had to kill
     him off like had to like really :(
     </div>
-    <ul>
-      <li> <a href="#home" class="links"> Home </a> </li>
-      <li> <a href="#news" class="links"> News </a> </li>
-      <li> <a href="#contact" class="links"> Contact </a> </li>
-      <li> <a href="#about" class="links"> About </a> </li>
-    </ul>
-  </div>
+
+    <nav>
+      <div>
+          <ul>
+            <li> <a href="#home" class="links"> Home </a> </li>
+            <li> <a href="#news" class="links"> News </a> </li>
+          </ul>
+
+          <ul>
+            <li> <a href="#contact" class="links"> Contact </a> </li>
+            <li> <a href="#about" class="links"> About </a> </li>
+          </ul>
+      </div>
+      </nav>
+    </div>
 
   <div class="icons">
     <div class="cloud"> <i class="material-icons fa-lg"> cloud </i> </div>
