--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
   <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <div class="box">
-    <p class="header"> ishani chettri </p>
+    <p class="header"> ↞ ishani chettri ⤙ </p>
   </div>
 
-    <p class="title"> caffeinated dreams </p>
+    <p class="title"> ✨ caffeinated dreams ✨ </p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
     <hr>
@@ -42,15 +43,23 @@
     her theme. it's similar to neji's like yasssss
     love that couple so much too bad they had to kill
     him off like had to like really :(
+
+    <div class="icons">
+      <div class="cloud"> <a href="https://www.instagram.com/ishani.chettrii/" title="instagram" class="iconslink"> <i class="material-icons icon" style="font-size:27px"> cloud </i> </a> </div>
+      <div class="mail"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="iconslink"> <i class="fa fa-comments icon" style="font-size:27px"> </i> </a> </div>
+    </div>
     </div>
 
     <nav>
-      <div>
+      <div class='navigation'>
           <ul>
             <li> <a href="#home" class="links"> Home </a> </li>
             <li> <a href="#news" class="links"> News </a> </li>
           </ul>
-
+      </div>
+    </nav>
+    <nav>
+      <div class='navigation'>
           <ul>
             <li> <a href="#contact" class="links"> Contact </a> </li>
             <li> <a href="#about" class="links"> About </a> </li>
@@ -58,11 +67,6 @@
       </div>
       </nav>
     </div>
-
-  <div class="icons">
-    <div class="cloud"> <i class="material-icons fa-lg"> cloud </i> </div>
-    <div class="mail"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="maillink"> <i class="fa fa-comments fa-lg"> </i> </a> </div>
-  </div>
 
   <div class="move">
     <img src="tumblr night.gif" alt="night" class="night">
