--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="author" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> overly desi for this bih </title>
 
   <link href="index.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin:600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://fonts.googleapis.com/css?family=Francois+One&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <div class="box">
-    <p class="header"> ↞ ishani chettri ⤙ </p>
+    <p class="header"> ↞ overly desi ⤙ </p>
   </div>
 
-    <p class="title"> ✨ caffeinated dreams ✨ </p>
+    <p class="subtitle"> ✨ caffeinated dreams ✨ </p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
     <hr>
 
   <div class="intro">
+    <div class="introheader"> intro to me! </div>
+
     <div class="introtext">
-    hi my name is ishani and
+    hi! my name is ishani chettri and
     im a high school senior who learned
     how to code on sundays in july in a
     journalism program.
+    <br>
     this is my first time learning
-    how to code so this is pretty blah.
-    idk what this page is for but im just
-    practicing what i have learned so far
-    from this club and anna who is awesome
-    right now im listening to tenten's theme from
-    naruto. the one hour version cuz i fuckin love
-    her theme. it's similar to neji's like yasssss
-    love that couple so much too bad they had to kill
-    him off like had to like really :(
+    how to code so this is my attempt
+    at making a website for myself.
+    </br>
+    <br>
+    i will be providing anime, music, books, manga
+    and bollywood movie recommendations to
+    start off my website. i might also post
+    blog posts about my life and senior year of
+    high school too!
+    </br>
+    <br>
+    this website is going to be constantly updated
+    throughout the year and hopefully, it'll look really
+    cool by july 2020!
+    </br>
+    <br>
+    so i guess look forward to my creations!
+    </br>
 
     <div class="icons">
-      <div class="cloud"> <a href="https://www.instagram.com/ishani.chettrii/" title="instagram" class="iconslink"> <i class="material-icons icon" style="font-size:27px"> cloud </i> </a> </div>
+      <div class="cloud"> <a href="https://www.instagram.com/ishani.chettrii/" title="instagram" target="_blank" class="iconslink"> <i class="material-icons icon" style="font-size:27px"> cloud </i> </a> </div>
       <div class="mail"> <a href="mailto:chettri.ishani@yahoo.com" title="email me!" class="iconslink"> <i class="fa fa-comments icon" style="font-size:27px"> </i> </a> </div>
     </div>
     </div>
@@ -53,25 +62,33 @@
     <nav>
       <div class='navigation'>
           <ul>
-            <li> <a href="#home" class="links"> Home </a> </li>
-            <li> <a href="#news" class="links"> News </a> </li>
+            <li> <a href="#home" class="links"> home </a> </li>
+            <li> <a href="secondpage.html" title="anime, movie & music recommendations" class="links"> a, m & m recs </a> </li>
           </ul>
       </div>
     </nav>
+
     <nav>
       <div class='navigation'>
           <ul>
-            <li> <a href="#contact" class="links"> Contact </a> </li>
-            <li> <a href="#about" class="links"> About </a> </li>
+            <li> <a href="#b&bm recs" title="books & bollywood movies recommendations" class="links"> b & bm recs </a> </li>
+            <li> <a href="#about" title="all about me!" class="links"> about </a> </li>
           </ul>
       </div>
-      </nav>
+    </nav>
     </div>
 
   <div class="move">
-    <img src="tumblr night.gif" alt="night" class="night">
-    <img src="tokyo ghoul night.gif" alt="tokyo ghoul" class="tokyoghoul">
-    <img src="source.gif" alt="aesthetic night" class="aesthetic">
+    <img src="tumblr night.gif" alt="night" class="night" >
+    <img src="tokyo ghoul night.gif" alt="tokyo ghoul" class="tokyoghoul" >
+    <img src="source.gif" alt="aesthetic night" class="aesthetic" >
+  </div>
+
+  <div class="container">
+  <div class="box2">
+    <div class="header2"> table of contents </div>
+     this is going to be my bigger and longer box
+  </div>
   </div>
 
   <img src="coffee shop.jpg" alt="coffee shop" class="coffeeshop">
