--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <title> just cruisin' </title>
 
-  <link href="index.css" rel="stylesheet">
+  <link href="home.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:600&display=swap" rel="stylesheet">
@@ -36,22 +36,22 @@
     this is my first time learning
     how to code so this is my attempt
     at making a website for myself.
-    </br>
+
     <br>
     i will be providing anime, music, books, manga
     and bollywood movie recommendations to
     start off my website. i might also post
     blog posts about my life and senior year of
     high school too!
-    </br>
+
     <br>
     this website is going to be constantly updated
     throughout the year and hopefully, it'll look really
     cool by july 2020!
-    </br>
+
     <br>
     so i guess look forward to my creations!
-    </br>
+
 
     <div class="icons">
       <div class="cloud"> <a href="https://www.instagram.com/ishani.chettrii/" title="instagram" target="_blank" class="iconslink"> <i class="material-icons icon" style="font-size:27px"> cloud </i> </a> </div>
@@ -84,11 +84,9 @@
     <img src="source.gif" alt="aesthetic night" class="aesthetic" >
   </div>
 
-  <div class="container">
   <div class="box2">
     <div class="header2"> table of contents </div>
      this is going to be my bigger and longer box
-  </div>
   </div>
 
   <img src="coffee shop.jpg" alt="coffee shop" class="coffeeshop">
